tests/type-errors/types/copyable_struct_with_nocopy_member.cx
struct Item : @nocopy {
    int value;
};

struct Container {
    Item item;
};

int main() {
    Container value;
    return 0;
}
